--- a/src/PMT/WebBundle/Resources/public/css/main.css
+++ b/src/PMT/WebBundle/Resources/public/css/main.css
@@ -35,3 +35,13 @@ body {
 .block > section {
     padding: 2px 4px;
 }
+
+
+.tabs-left > .nav-tabs {
+    margin-right: -1px;
+}
+.tabs-left > .tabs-container {
+    border-top: 1px solid #DDDDDD;
+    float: left;
+    padding-top: 10px;
+}
