--- a/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/layout.html.twig
@@ -18,21 +18,51 @@
         <div class="span12">
             <div class="tabbable tabs-left">
                 <ul class="nav nav-tabs span2">
-                    <li class="active"><a href="{{ path('project_detail') }}">Summary</a></li>
-                    <li><a href="#issues">Issues</a></li>
-                    <li><a href="#roadmap">Road Map</a></li>
-                    <li><a href="#agile">Agile</a></li>
-                    <li><a href="#people">People</a></li>
-                    <li><a href="#changelog">Change Log</a></li>
-                    <li><a href="#popular">Popular Items</a></li>
-                    <li><a href="#calendar">Calendar</a></li>
-                    <li><a href="#milestones">Milestones</a></li>
-                    <li><a href="#components">Components</a></li>
-                    <li><a href="#labels">Labels</a></li>
-                    <li><a href="#builds">Builds</a></li>
-                    <li><a href="#source">Source</a></li>
-                    <li><a href="#reviews">Reviews</a></li>
-                    <li><a href="#test">Test</a></li>
+                    <li{% if app.request.attributes.get('_route') == 'project_summary' %} class="active"{% endif %}>
+                        <a href="{{ path('project_summary') }}">Summary</a>
+                    </li>
+                    <li{% if app.request.attributes.get('_route') == 'project_issues' %} class="active"{% endif %}>
+                        <a href="{{ path('project_issues') }}">Issues</a>
+                    </li>
+                    <li>
+                        <a href="#roadmap">Road Map</a>
+                    </li>
+                    <li>
+                        <a href="#agile">Agile</a>
+                    </li>
+                    <li>
+                        <a href="#people">People</a>
+                    </li>
+                    <li>
+                        <a href="#changelog">Change Log</a>
+                    </li>
+                    <li>
+                        <a href="#popular">Popular Items</a>
+                    </li>
+                    <li>
+                        <a href="#calendar">Calendar</a>
+                    </li>
+                    <li>
+                        <a href="#milestones">Milestones</a>
+                    </li>
+                    <li>
+                        <a href="#components">Components</a>
+                    </li>
+                    <li>
+                        <a href="#labels">Labels</a>
+                    </li>
+                    <li>
+                        <a href="#builds">Builds</a>
+                    </li>
+                    <li>
+                        <a href="#source">Source</a>
+                    </li>
+                    <li>
+                        <a href="#reviews">Reviews</a>
+                    </li>
+                    <li>
+                        <a href="#test">Test</a>
+                    </li>
                 </ul>
                 <div class="tabs-container">
                     <div class="tab-content span10">
