--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -26,19 +26,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">PMT</a>
+            <a class="brand" href="{{ path('dashboard') }}">PMT</a>
             <div class="nav-collapse collapse">
                 <p class="navbar-text pull-right">
                     Logged in as <a href="#" class="navbar-link">Username</a>
                 </p>
                 <ul class="nav">
-                    <li class="active"><a href="{{ path('dashboard') }}">Dashboard</a></li>
+                    <li{% if app.request.attributes.get('_route') == 'dashboard' %} class="active"{% endif %}><a href="{{ path('dashboard') }}">Dashboard</a></li>
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">Project <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Project 1 <span class="tag project">PRO</span></a></li>
-                            <li><a href="#">Notifier <span class="tag project">NOT</span></a></li>
-                            <li><a href="#">Third Project <span class="tag project">THI</span></a></li>
+                            <li><a href="{{ path('project_summary') }}">Project 1 <span class="tag project">PRO</span></a></li>
+                            <li><a href="{{ path('project_summary') }}">Notifier <span class="tag project">NOT</span></a></li>
+                            <li><a href="{{ path('project_summary') }}">Third Project <span class="tag project">THI</span></a></li>
                             <li class="divider"></li>
                             <li><a href="#">Create</a></li>
                             <li><a href="#">Settings</a></li>
