--- a/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
@@ -3,31 +3,63 @@
 {% block tabContent %}
     <div class="row-fluid">
         <div class="span6">
-            <div class="block">
-                <header>Description</header>
-                <section>
-                    The description of the project
-                </section>
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_description">
+                            Description
+                        </a>
+                    </div>
+                    <div id="accordion_description" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            The description of the project
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="block">
-                <header>Issues</header>
-                <section>
-                    The open/critical issues of the project
-                </section>
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_issues">
+                            Issues
+                        </a>
+                    </div>
+                    <div id="accordion_issues" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            The open/critical issues of the project
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="span6">
-            <div class="block">
-                <header>Milestones</header>
-                <section>
-                    The milestones of the project
-                </section>
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_milestones">
+                            Milestones
+                        </a>
+                    </div>
+                    <div id="accordion_milestones" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            The milestones of the project
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="block">
-                <header>Activity stream</header>
-                <section>
-                    The activity stream of the project
-                </section>
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_stream">
+                            Activity stream
+                        </a>
+                    </div>
+                    <div id="accordion_stream" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            The activity stream of the project
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
