--- a/src/PMT/WebBundle/Resources/views/Project/issues.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/issues.html.twig
@@ -3,11 +3,20 @@
 {% block tabContent %}
     <div class="row-fluid">
         <div class="span12">
-            <div class="block">
-                <header>Issues</header>
-                <section>
-                    Issue list
-                </section>
+            <div class="accordion">
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_description">
+                            Issues
+                        </a>
+                    </div>
+                    <div id="accordion_description" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                            Issue list
+                            <a href="{{ path('issue_detail') }}">issue detail</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
