--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -1,7 +1,7 @@
 {% extends "PMTWebBundle::noLayout.html.twig" %}
 
 {% block content %}
-    <form class="form-horizontal">
+    <form class="form-horizontal" action="{{ path('issue_form') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
     </form>
 {% endblock %}
