Add example issue detail link

--- a/src/PMT/WebBundle/Resources/views/Project/issues.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/issues.html.twig
@@ -13,7 +13,7 @@
                     <div id="accordion_description" class="accordion-body collapse in">
                         <div class="accordion-inner">
                             Issue list
-                            {#<a href="{{ path('issue_detail', {'project_code': issue.project.code, 'id': issue.id}) }}">issue detail</a>#}
+                            <a href="{{ path('issue_detail', {'project_code': 'PRO', 'id': 5}) }}">issue detail</a>
                         </div>
                     </div>
                 </div>
