--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -180,7 +180,7 @@
                             <table class="time_tracking">
                                 <tr>
                                     <td>Estimated:</td>
-                                    <td>4h</td>
+                                    <td>5h</td>
                                     <td class="bar">
                                         <div class="progress">
                                             <div class="bar" style="width: 50%;"></div>
@@ -189,10 +189,56 @@
                                 </tr>
                                 <tr>
                                     <td>Logged:</td>
+                                    <td>6h</td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="bar bar-danger" style="width:60%;"></div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <table class="time_tracking">
+                                <tr>
+                                    <td>Estimated:</td>
+                                    <td>4h</td>
+                                    <td class="bar">
+                                        <div class="progress">
+                                            <div class="bar" style="width: 100%;"></div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Logged:</td>
                                     <td>3h</td>
                                     <td>
                                         <div class="progress">
-                                            <div class="bar" style="width: 75%;"></div>
+                                            <div class="bar bar-success" style="width:75%;"></div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+
+
+                            <table class="time_tracking">
+                                <tr>
+                                    <td>Estimated:</td>
+                                    <td>4h</td>
+                                    <td class="bar">
+                                        <div class="progress">
+                                            <div class="bar" style="width: 100%;"></div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Logged:</td>
+                                    <td>5h</td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="bar bar-danger" style="width: 100%;"></div>
+                                        </div>
+                                        <div class="progress">
+                                            <div class="bar bar-danger" style="width:25%;"></div>
                                         </div>
                                     </td>
                                 </tr>
