Add basic issue list

--- a/src/PMT/WebBundle/Resources/views/Project/issues.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/issues.html.twig
@@ -12,8 +12,12 @@
                     </div>
                     <div id="accordion_description" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            Issue list
-                            <a href="{{ path('issue_detail', {'project_code': 'PRO', 'id': 5}) }}">issue detail</a>
+                            <ul>
+                            {% for issue in project.issues %}
+                            <li><a href="{{ path('issue_detail', {'project_code': project.code, 'id': issue.id}) }}">{{ issue.summary }}</a></li>
+                            {% endfor %}
+                            </ul>
+
                         </div>
                     </div>
                 </div>
