--- a/src/PMT/WebBundle/Resources/views/Form/modalForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Form/modalForm.html.twig
@@ -9,6 +9,7 @@
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button class="btn btn-primary">Save changes</button>
+        <button class="btn btn-primary modal-save">Save changes</button>
     </div>
+    <script src="{{ asset('bundles/pmtweb/js/modal.js') }}"></script>
 </div>
