Add more data to the templates.

--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -79,7 +79,7 @@
                     </div>
                     <div id="accordion_description" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            Issue description
+                            {{ issue.description }}
                         </div>
                     </div>
                 </div>
