--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -1,7 +1,140 @@
-{% extends "PMTWebBundle::noLayout.html.twig" %}
+{% extends "PMTWebBundle::layout.html.twig" %}
 
 {% block content %}
-    <form class="form-horizontal" action="{{ path('issue_form') }}" method="post" {{ form_enctype(form) }}>
-        {{ form_widget(form) }}
-    </form>
+
+    <div class="row">
+        <div class="span8">
+            <h1>New issue</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        {{ form_errors(form) }}
+        <form action="{{ path('issue_form') }}" method="post" {{ form_enctype(form) }}>
+            <div class="span8">
+                <div class="accordion">
+                    <div class="accordion-group">
+                        <div class="accordion-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
+                                Details
+                            </a>
+                        </div>
+                        <div id="accordion_details" class="accordion-body collapse in">
+                            <div class="accordion-inner">
+
+                                <div class="control-group">
+                                    <label class="control-label" for="summary">
+                                        {{ form_label(form.summary) }}
+                                    </label>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.summary, {'attr': {'class': 'span12'}}) }}
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label class="control-label" for="type">
+                                        {{ form_label(form.description) }}
+                                    </label>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.description, {'attr': {'class': 'span12', 'rows': '10'}}) }}
+                                    </div>
+                                </div>
+
+                                <div class="control-group">
+                                    <label class="control-label" for="type">
+                                        {{ form_label(form.tags) }}
+                                    </label>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.tags, {'attr': {'class': 'span12'}}) }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="span4">
+                <div class="accordion">
+                    <div class="accordion-group">
+                        <div class="accordion-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" href="#accordion_meta">
+                                Meta
+                            </a>
+                        </div>
+                        <div id="accordion_meta" class="accordion-body collapse in">
+                            <div class="accordion-inner">
+                                <div class="control-group">
+                                    <div class="control-label">
+                                        {{ form_label(form.project) }}
+                                    </div>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.project, {'attr': {'class': 'span12'}}) }}
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label class="control-label" for="type">
+                                        {{ form_label(form.type) }}
+                                    </label>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.type, {'attr': {'class': 'span12'}}) }}
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label class="control-label" for="type">
+                                        {{ form_label(form.priority) }}
+                                    </label>
+                                    <div class="controls row-fluid">
+                                        {{ form_widget(form.priority, {'attr': {'class': 'span12'}}) }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <div class="accordion-group">
+                        <div class="accordion-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" href="#accordion_people">
+                                People
+                            </a>
+                        </div>
+                        <div id="accordion_people" class="accordion-body collapse in">
+                            <div class="accordion-inner">
+                                <div class="control-group">
+                                    <label class="control-label" for="owner">
+                                        owner
+                                    </label>
+                                    <div class="controls row-fluid">
+                                        <select name="" id="owner" class="span12"></select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+            <div class="span12">
+                <div class="form-actions">
+                    <div class="form-horizontal">
+                        <div class="pull-right">
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                            <button type="button" class="btn">Cancel</button>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="rebuild">
+                                {{ form_label(form.rebuild) }}
+                            </label>
+                            <div class="controls">
+                                {{ form_widget(form.rebuild) }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {{ form_rest(form) }}
+        </form>
+
+    </div>
 {% endblock %}
