Create issue without modal and add tags to issues.

--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -50,7 +50,11 @@
                                     </tr>
                                     <tr>
                                         <td>Labels:</td>
-                                        <td>value</td>
+                                        <td>
+                                            {% for tag in issue.tags %}
+                                                {{ tag.name }},
+                                            {% endfor %}
+                                        </td>
                                     </tr>
                                 </table>
                             </div>
