--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -38,6 +38,6 @@
 </div>
 
 <script src="{{ asset('bundles/pmtweb/js/bootstrap.min.js') }}"></script>
-
+{% block body_scripts %}{% endblock %}
 </body>
 </html>
