--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -130,7 +130,7 @@
                     <div class="form-horizontal">
                         <div class="pull-right">
                             <button type="submit" class="btn btn-primary">Save changes</button>
-                            <button type="button" class="btn">Cancel</button>
+                            <button type="button" class="btn" onclick="window.history.back();">Cancel</button>
                         </div>
                         <div class="control-group">
                             <label class="control-label" for="rebuild">
