Move select2 to layout as it will be used almost everywhere

--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -11,9 +11,11 @@
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
 
     <link href="{{ asset('bundles/pmtweb/css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('bundles/pmtweb/js/select2/select2.css') }}" rel="stylesheet" />
     <link href="{{ asset('bundles/pmtweb/css/main.css') }}" rel="stylesheet" />
 
     <script src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('bundles/pmtweb/js/select2/select2.min.js') }}"></script>
 
     {% block head_additions %}{% endblock %}
 </head>
