Add select2-boostrap css.

--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -12,6 +12,7 @@
 
     <link href="{{ asset('bundles/pmtweb/css/bootstrap.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('bundles/pmtweb/js/select2/select2.css') }}" rel="stylesheet" />
+    <link href="{{ asset('bundles/pmtweb/css/select2-bootstrap.css') }}" rel="stylesheet" />
     <link href="{{ asset('bundles/pmtweb/css/main.css') }}" rel="stylesheet" />
 
     <script src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
