--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -151,10 +151,12 @@
                 'tags': [],
                 query: function (query) {
                     var data = {results: []}, i, j, s;
-                    for (i = 1; i < 5; i++) {
-                        s = "";
-                        for (j = 0; j < i; j++) {s = s + query.term;}
-                        data.results.push({id: query.term, text: s});
+                    if (query.term.length) {
+                        for (i = 1; i < 5; i++) {
+                            s = "";
+                            for (j = 0; j < i; j++) {s = s + query.term;}
+                            data.results.push({id: query.term, text: s});
+                        }
                     }
                     query.callback(data);
                 },
