--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -111,7 +111,7 @@
                     </div>
                     <div id="accordion_activity" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            Anim pariatur cliche...
+                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced'} %}
                         </div>
                     </div>
                 </div>
