--- a/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
@@ -26,7 +26,7 @@
                     </div>
                     <div id="accordion_stream" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            some content
+                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced'} %}
                         </div>
                     </div>
                 </div>
