--- a/src/PMT/WebBundle/Resources/public/css/login.css
+++ b/src/PMT/WebBundle/Resources/public/css/login.css
@@ -2,9 +2,9 @@ body {
     background-color: #f5f5f5;
 }
 
-.form-signin {
+.signin-wrapper {
     max-width: 300px;
-    padding: 19px 29px 29px;
+    padding: 19px 29px 19px;
     margin: 0 auto 20px;
     background-color: #fff;
     border: 1px solid #e5e5e5;
@@ -27,4 +27,9 @@ body {
     height: auto;
     margin-bottom: 15px;
     padding: 7px 9px;
+}
+
+.signin-extra {
+    border-top: 1px solid #e5e5e5;
+    padding-top: 20px;
 }
