set minimumInputLength for tagging.

--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -150,6 +150,7 @@
             $('#issue_tags').select2({
                 'tags': true,
                 'multiple': true,
+                'minimumInputLength': 2,
                 'ajax': {
                     'url': "/ajax/tags.json",
                     'dataType': 'json',
